# PDF-cutter

./: README.md  python pdf cutter.py
Moodle-Downloader-master/pdfCutter/: pdf.py
pdf-cutter/: pyproject.toml
pdf-cutter/pdf_cutter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdf-cutter/tests/: pdf.py  test_pdf_cutter.py
